crates/shipper-events/src/snapshots/shipper_events__tests__preflight_complete_yaml.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: preflight_complete
  finishability: proven
package: workspace
