crates/shipper-events/src/snapshots/shipper_events__tests__preflight_workspace_verify_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: PreflightWorkspaceVerify {
        passed: true,
        output: "dry-run successful",
    },
    package: "workspace",
}
