crates/shipper-events/src/snapshots/shipper_events__tests__readiness_poll_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: ReadinessPoll {
        attempt: 3,
        visible: false,
    },
    package: "my-crate@1.0.0",
}
