crates/shipper-events/src/snapshots/shipper_events__tests__readiness_started_yaml.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: readiness_started
  method: api
package: my-crate@1.0.0
